tests/suite/typecheck/fail/tcfail203/tcfail203.cabal
name: tcfail203
version: 1.0
build-type: Simple
cabal-version: >= 1.2

library
    build-depends: base
    eta-options: -fdiagnostics-color=never
    exposed-modules: Tcfail203
                     Tcfail203a
